# Remi-CPP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  autobuild  config.json
.trunk/: trunk.yaml
scripts/: converter.req  ctconverter.py
src/: main.cpp  tokenizer.cpp  tokenizer.h
src/common/: json_handler.cpp  json_handler.h  macros.h  prompt_mod.cpp  prompt_mod.h  remio.h
src/models/: generator.cpp  generator.h  tokenizer.cpp  tokenizer.h
